# sqlidps

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ML.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml
sqlidps/: __init__.py  inference.py  lex.yy.c  lexer.l  model.npz  model.pkl
